Scroll Animations On Mobile Fix.

--- a/style.css
+++ b/style.css
@@ -868,7 +868,7 @@ footer {
 
     .hidden {
         opacity: 1;
-        transform: translateX(100%);
+        transform: translateX(0);
         transition: all 0s;
     }
 }
